@@ -200,145 +200,3 @@ function workflow_transition_load_single($entity_type, $entity_id, $field_name =
 function workflow_transition_load($hid) {
   return entity_load_single('WorkflowTransition', $hid);
 }
-
-/*
- * Test functions.
- *
- * To test caches, load same object twice in a page (see d.o. issue #1572466).
- */
-function workflow_test_entity_workflow_crud() {
-  $ws = workflow_load_multiple();
-  $count1 = count($ws);
-  $w = workflow_create('test' . REQUEST_TIME);
-
-  $w->save();
-
-  // Test cache: $w3 must be OK, too.
-  $w2 = workflow_load($w->wid);
-  $w3 = workflow_load($w->wid);
-  if ($w2 != $w3) {
-    // error.
-  }
-
-
-  // Test Cache: number of workflows must be OK.
-  $ws = workflow_load_multiple();
-  $count2 = count($ws);
-
-  $w->delete();
-  $ws = workflow_load_multiple();
-  $count3 = count($ws);
-  
-  if($count1 === $count3 && ($count2 - $count1) == 1) {
-    drupal_set_message('workflow->create/save/delete OK');
-  }
-  else  {
-    drupal_set_message('workflow->create/save/delete: error');
-  }
-
-
-  $w = workflow_create('test' . REQUEST_TIME);
-  $s1 = $w->createState('first');
-  $s2 = $w->createState('second');
-  $s3 = $w->createState('third');
-  $s1->save();
-  $s2->save();
-  $s2->save();
-  $s3->save();
-}
-
-function workflow_test_entity1() {
-  $w = workflow_create('test' . REQUEST_TIME);
-  $w->save();
-  $s1 = $w->createState('first');
-  $s2 = $w->createState('second');
-  $s3 = $w->createState('third');
-  $s1->save();
-  $s2->save();
-  $s2->save();
-  $s3->save();
-  dpm($s1);
-  dpm($s2);
-  dpm($w->getStates());
-  $t1 = $w->createTransition($s1->sid, $s2->sid);
-  $t1->save();
-  dpm($t1);
-  $t2 = $w->createTransition('third', 'second');
-  $t2->save();
-  $t3 = $w->createTransition('third', 'second');
-  dpm($t2);
-  dpm($t3);
-//  dpm($t->uri());
-//  dpm($t->label());
-// $w->delete();
-}
-
-function workflow_test_entity2() {
-  $ts = entity_load('WorkflowConfigTransition', array(6));
-  $t = reset($ts);
-  $t->roles += array(3 => 3);
-  entity_save('WorkflowConfigTransition', $t);
-}
-
-function workflow_test_entity3() {
-  $w = workflow_load_single(1);
-  dpm($w->getStates());
-dpm($w->loadTransitions());
-//  $t1 = $w->createTransition($s1->sid, $s2->sid);
-//  $t1->save();
-//  dpm($t1);
-//  $t2 = $w->createTransition('third', 'second');
-//  $t2->save();
-//  dpm($t2);
-//  dpm($t->uri());
-//  dpm($t->label());
-// $w->delete();
-
-//  $ts = entity_load('WorkflowConfigTransition', array(6));
-//  $t = reset($ts);
-//  $t->roles += array(3 => 3);
-//  entity_save('WorkflowConfigTransition', $t);
-}
-
-function workflow_test_entity_allowable() {
-  $w = workflow_create('workflow_test_'.REQUEST_TIME);
-  $w->save();
-  $s1 = $w->createState('to be opened');
-  $s2 = $w->createState('open');
-  $s3 = $w->createState('closed');
-  $s1->save();
-  $s2->save();
-  $s3->save();
-  $roles = array(1, 2); // anon, auth user.
-dpm($roles);
-  $t1 = $t = $w->createTransition(WORKFLOW_CREATION_STATE_NAME, 'to be opened');
-  $t->roles = $roles;
-  $t->save();
-  $t2 = $t = $w->createTransition('to be opened', 'open');
-  $t->roles = $roles;
-  $t->save();
-  $t3 = $t = $w->createTransition('open', 'closed');
-  $t->roles = $roles;
-DPM($t3);
-  $t->save();
-DPM($t3);
-  $t4 = $t = $w->createTransition('closed', 'open');
-  $t->roles = $roles;
-  $t->save();
-
-  dpm($s2->getOptions('', NULL));
-  // returns  TRUE if the role is allowed to do the transition.
-  $rc = $t3->isAllowed($role = 2);
-  dpm($t3);
-  dpm('this result must be TRUE: ' . (int) $rc);
-  $rc = $t3->isAllowed($role = 3);
-  dpm('this result must be FALSE: ' . (int) $rc);
-
-  $rc = $w->GetTransitionsBySid($s3->sid);
-  dpm($rc, 'allowed transitions from ' . $s3->label());
-
-  $ts = $w->getTransitions();
-  dpm($ts);
-  $ts = $w->getTransitionsBySid($s3->sid);
-  dpm($ts);
-}
